fix: stop links from shifting, when actively clicking

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -17,7 +17,7 @@
         display: flex;
         margin: auto;
         width: 60vw;
-        height: 100%;
+        height: 49px;
         max-width: 1152px; // 60% of large screen width
         color: $header_link;
         border-bottom: 2px solid $app_accent;
